# backend

./: .dockerignore  .env.example  Dockerfile  compose.yml  pyproject.toml
src/: server.py
src/lib/: analyze_code.py  code_suggestion.py  llm_model.py
src/utils/: http_response.py
